[package]
name = "grrs"
version = "0.1.0"
authors = ["Rohan Jain <crodjer@gmail.com>"]
edition = "2018"

[dependencies]
clap-verbosity-flag = "0.2.0"
env_logger = "0.6.0"
exitfailure = "0.5.1"
failure = "0.1.5"
log = "0.4.6"
structopt = "0.2.14"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
