[package]
name = "grrs-lazy"
version = "0.1.0"
authors = ["Rohan Jain <crodjer@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A tool to search files"
homepage = "https://github.com/crodjer/grrs/"
repository = "https://github.com/crodjer/grrs/"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
clap-verbosity-flag = "0.2.0"
env_logger = "0.6.0"
exitfailure = "0.5.1"
failure = "0.1.5"
log = "0.4.6"
structopt = "0.2.14"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
